# waylolingo

./: .env.local.example  .gitignore  Makefile  README.md  pyproject.toml
data/: pinyin_syllables.csv
data/audio/pinyin_full/: download_report.json
data/lessons/: dailydialog_100x10_en.json  dailydialog_beginner_50x10_en.json  dailydialog_intermediate_50x10_en.json  intermediate_nouns_100x10_en.json  super_easy_100x10_en.json
scripts/: build.sh  download_pinyin_audio.py  generate_intermediate_noun_lessons.py  generate_super_easy_lessons.py  pull-model.sh  restart-ollama.sh  run.sh  setup.sh  split_lessons_by_difficulty.py  start-ollama.sh  stop-ollama.sh  test.sh  verify.sh
src/mandarin_translator/: api.py  models.py  translator.py
src/mandarin_translator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mandarin_translator/static/: app.html
tests/: test_api.py  test_translator.py
