[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mandarin-translator"
version = "0.1.0"
description = "FastAPI prototype for a structured Mandarin translator response format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn>=0.35,<1.0",
    "pydantic>=2.11,<3.0",
    "httpx>=0.28,<1.0",
    "pypinyin>=0.55,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]